// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockContainer changes block pointer event when editor editable state change 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
/>
`;

exports[`BlockContainer changes block pointer event when editor editable state change 2`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: unset; white-space: normal;"
/>
`;

exports[`BlockContainer inline 1`] = `
<span
  as="span"
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <span
    class="brd-c-bbClCh"
    contenteditable="false"
  >
     
  </span>
  block
  <span
    class="brd-c-bbClCh"
    contenteditable="false"
  >
     
  </span>
</span>
`;

exports[`BlockContainer with actionOptions 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug"
  >
    block
    <button
      aria-haspopup="dialog"
      class="brd-c-iYqWMG brd-c-iYqWMG-eWWUXK-btnType-text brd-c-iYqWMG-fdOzqt-size-small brd-c-ivBjhy brd-c-iAZzvg brd-c-iAZzvg-cezigA-atListStart-false"
      role="button"
      type="button"
    >
      <i
        data-mock-icon="DragSecondary"
      />
    </button>
  </div>
</div>
`;
